@@ -1,3 +1,2 @@
-django>=1.4
 unicodecsv>=0.9.0
 
