@@ -2,6 +2,7 @@
 
 Release 0.1 (in development)
 ============================
+* New get_<ACTION>_filename() for easy customize the filename
 * New registration shortcut `add_to_site() <api.html#adminactions.actions.add_to_site>`_
 * New action: :ref:`merge`
 * Fixed :ghissue:`9`
